# neverhuman

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  MEDIA_BOUNTY.md  NOTICE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TELEMETRY.md  THIRD_PARTY_NOTICES.md  VISION.md  github_meta_copy.md  install.sh  launch.sh  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  connector.md  feature_request.md  feature_request.yml  onboarding.md  research.yml
.github/workflows/: ci.yml  release.yml
docs/: benchmarks.md  faq.md  getting-started.md  inference-runtime.md  repository-map.md  system-network-diagram.md
docs/design/: architecture_decisions.md  emotional_substrate.md  finetuning_strategy.md  humanity-level-up-plan.md  inner_dialogue.md  python-inventory-rust-status.md  review_synthesis.md  rust-port-audit-plan.md  sovereignty_design.md
docs/project/: TRADEMARKS.md
flash-moe/: Makefile  build_expert_index_35b.py  expert_index_35b.json  export_tokenizer_35b.py  export_vocab_35b.py  extract_weights_35b.py  infer.m  repack_experts_35b.py
gary/: .env.example  AGENT.md  ARCHITECTURE.md  requirements.txt  server.py  start.sh  stop.sh
gary/benchmarks/: latency.py  results.json
gary/core/: __init__.py  affect_types.py  change_router.py  commitments.py  drift_audit.py  drive_types.py  eval_harness.py  eval_metrics.py  events.py  llm_watchdog.py  log_writer.py  mind.py  (+8 more)
gary/rust/turn_classifier/: Cargo.toml
gary/rust/turn_classifier/src/: lib.rs  main.rs
(+138 files in other folders)
