[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neverhuman"
version = "0.1.0"
description = "GARY — a near-human AI that grows more human the longer you know it"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "mlx-qwen3-asr[serve]",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12.1",
    "huggingface_hub>=0.23.0",
]

[project.scripts]
gary = "gary.server:main"
neverhuman = "gary.server:main"

[project.urls]
Homepage = "https://github.com/neverhuman/neverhuman"
Documentation = "https://github.com/neverhuman/neverhuman/blob/main/gary/ARCHITECTURE.md"
Issues = "https://github.com/neverhuman/neverhuman/issues"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled separately

[tool.pytest.ini_options]
testpaths = ["gary/testing"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q"
