[package]
name = "gary_turn_classifier"
version = "0.1.0"
edition = "2021"

[lib]
name = "gary_turn_classifier"
path = "src/lib.rs"

[[bin]]
name = "gary-turn-classifier"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
